--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
     "aws-amplify": "^4.1.3",
-    "next": "latest",
+    "next": "10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -22,7 +22,6 @@
     "autoprefixer": "^10.2.6",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
