--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@aws-amplify/ui-react": "^1.2.5",
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.3",
     "aws-amplify": "^4.1.3",
     "next": "latest",
     "react": "^17.0.2",
