--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev -p 3001",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint . --cache --ext .ts,.js,.tsx",
+		"lint": "eslint . --cache --ext .ts,.js,.tsx --fix",
 		"format": "prettier --write ."
 	},
 	"dependencies": {
